--- a/FazalOil/Views/Main/Invoice.cshtml
+++ b/FazalOil/Views/Main/Invoice.cshtml
@@ -563,7 +563,7 @@
                                         <div class="col-lg-4">
                                             <div class="form-group">
                                                 <label>Expected km: </label>
-                                                <input type="text" id="txtExpectedkm" class="form-control">
+                                                <input type="text" id="txtExpectedkm" onchange="nextChange()" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
